# chess_crew

./: README.md  pyproject.toml
src/chess_crew/: crew.py  main.py
src/chess_crew/config/: agents.yaml  tasks.yaml
