[tool.poetry]
name = "chess_crew"
version = "0.1.0"
description = "chess_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}
chess = "^1.10.0"

[tool.poetry.scripts]
chess_crew = "chess_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"